[tool.poetry]
name = "az-account-switcher"
version = "1.5.0"
description = "Utility to switch Azure subscriptions"
license = "MIT"
authors = ["Alexander Bij <Alexander.Bij@gmail.com>"]
readme = "README.md"
repository = "https://github.com/abij/az-account-switcher"
keywords = ["azure", "cli", "subscription", "management"]
packages = [{ include = "az_account_switcher" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/managing-dependencies/#dependency-groups
[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest_click = "^1.1.0"
commitizen = "^3.13.0"
setuptools = ">=69.0.3,<79.0.0"  # Required for PyCharm.

[tool.poetry.scripts]
az-switch = "az_account_switcher.az_account_switcher:main"
az-account-switcher = "az_account_switcher.az_account_switcher:main"

[tools.ruff]
line-length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
bump_message = "bump: version $current_version -> $new_version [skip ci]"
